2007-06-19 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Corrected syntax error

2007-06-16 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documented the createTXPlot method (for time-x plots)
        * plotpriv.tcl: Added the DrawTimeData method and proper support for legends
                        in barcharts
        * plotaxis.tcl: Added drawing rectangles in legends
        * plotdemos1.tcl: Extended the barchart with a legend and added
                          data to the TX-plot

2007-06-12 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documented a tip by Bernhard Wallner (number of
                         series can be floating-point)
        * plotaxis.tcl: Corrected a few typos in drawing the legend
        * plotdemos1.tcl: Apply Bernhard's tip to see the effect

2007-06-02 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documentation of background options, 3D ribbon charts
        * plotchart.tcl: 3D ribbon plot added
        * plotpriv.tcl: Support for extra background options and filling data series
        * plotannot.tcl: Image and gradient background options, 3D ribbon charts
        * plotdemos2.tcl: Demonstration of background options
        * plotbus.test: Demonstration of 3D ribbon charts

2007-05-28 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documentation of rchart subcommand
        * plotchart.tcl: Support for drawing an R-chart
        * plotpriv.tcl: Support for drawing an R-chart
        * plotdemos6.tcl: Demonstration of R-chart

2007-05-27 Arjen Markus  <arjenmarkus@users.sourceforge.net>
        * plotchart.man: Documentation of dot subcommand
        * plotchart.tcl: Support for drawing dots
        * plotpriv.tcl: Support for drawing dots, corrected mistakes in vector drawing
        * plotdemos6.tcl: Demonstration of dots and vectors
