@@ -2,4 +2,4 @@ if {![package vsatisfies [package provide Tcl] 8.3]} {
     # PRAGMA: returnok
     return
 }
-package ifneeded Plotchart 1.3 [list source [file join $dir plotchart.tcl]]
+package ifneeded Plotchart 1.3.1 [list source [file join $dir plotchart.tcl]]
